fix chrome driver issue

--- a/node/conf/wrapper.conf
+++ b/node/conf/wrapper.conf
@@ -67,7 +67,8 @@ wrapper.java.library.path.1=../lib
 wrapper.java.additional.auto_bits=TRUE
 
 # Java Additional Parameters
-#wrapper.java.additional.1=
+wrapper.java.additional.1=-Dwebdriver.chrome.driver
+wrapper.java.additional.2=../lib/chromedriver.exe
 
 # Initial Java Heap Size (in MB)
 #wrapper.java.initmemory=3
@@ -85,8 +86,6 @@ wrapper.app.parameter.6=-nodeConfig
 wrapper.app.parameter.7=../conf/config.json
 wrapper.app.parameter.8=-hub
 wrapper.app.parameter.9=http://localhost:4646/register
-wrapper.app.parameter.10=-Dwebdriver.chrome.driver
-wrapper.app.parameter.11=../lib/chromedriver.exe
 
 #********************************************************************
 # Wrapper Logging Properties
