--- a/node/conf/config.json
+++ b/node/conf/config.json
@@ -12,6 +12,10 @@
                 "browserName":"firefox",
                 "maxInstances":2,
                 "firefox_binary":"d:\\common\\firefox\\firefox18\\firefox.exe"                  
+                },
+                {
+                "browserName":"chrome",
+                "maxInstances":2,                 
                 }
         ],
 "configuration":
